--- a/5w/css/style.css
+++ b/5w/css/style.css
@@ -299,3 +299,21 @@ div.nav-container#nav-container-up{
 		height: 40px;
 	}	
 }
+
+/*------------- ADMIN -------------*/
+div#admin{
+	padding: 20px;
+}
+
+div#admin div#record-bt{
+	width: 80px;
+	margin-bottom: 20px;
+	background-color: rgba(255, 0, 50, 0.65);
+	color: white;
+	text-align: center;
+	font-weight: bold;
+	font-size: 13px;
+	padding: 5px;
+	z-index: 1000;
+	cursor: pointer;
+}
